libs/iroha_schema/derive/tests/ui_fail/fieldless_enum_with_explicit_discriminant.stderr
error: Fieldless enums with explicit discriminants are not allowed
 --> tests/ui_fail/fieldless_enum_with_explicit_discriminant.rs:3:10
  |
3 | #[derive(IntoSchema)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoSchema` (in Nightly builds, run with -Z macro-backtrace for more info)
